[tool.poetry]
name = "paisocket"
version = "0.1.0"
description = "Asyncio TCP server & client of PAICORE 2.0"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PAICookers/PAIAsyncio"
homepage = "https://github.com/PAICookers/PAIAsyncio"
documentation = "https://github.com/PAICookers/PAIAsyncio#readme"
keywords = ["PAICookers", "PAIAsyncio", "PAICORE"]
include = ["./paiasyncio"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = [
	{ version = "^1.19.1", python = ">=3.7" },
	{ version = ">1.12.1, <=1.13.1", python = ">=3.6, <3.7" }
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
