[tool.poetry]
name = "paiserver"
version = "0.0.1"
description = "Asyncio TCP server for Zynq"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PAICookers/PAIAsyncServer"
homepage = "https://github.com/PAICookers/PAIAsyncServer"
documentation = "https://github.com/PAICookers/PAIAsyncServer#readme"
keywords = ["PAICookers", "asyncio", "PAICORE"]
include = ["./paiserver"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
